cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09

#This template is for the AppStream 2.0 Elastic fleets workshop

Parameters:
  CreateAS2Role:
    Description: Set this to true if you need to create the AppStreamServiceAccess role. Setting it to false will skip deploying the AppStream 2.0 service role.
    Default: false
    Type: String

Conditions:
  CreateAppStreamRole: !Equals [!Ref CreateAS2Role, "true"]

Mappings:
  RegionMap:
    us-east-1:
      az1: use1-az2
      az2: use1-az4
      az3: use1-az6
    us-west-2:
      az1: usw2-az1
      az2: usw2-az2
      az3: usw2-az3
    eu-west-1:
      az1: euw1-az1
      az2: euw1-az2

Resources:
  iamAmazonAppStreamServiceAccess:
    Type: AWS::IAM::Role
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W28
            reason: "This role must be explicitly named for the AppStream 2.0 Service" 
    Condition: CreateAppStreamRole
    Properties: 
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - appstream.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns: 
        - arn:aws:iam::aws:policy/service-role/AmazonAppStreamServiceAccess
      MaxSessionDuration: 3600
      Path: /service-role/
      RoleName: AmazonAppStreamServiceAccess

  iamAmazonAppStreamImageBuilderRole:
    Type: AWS::IAM::Role
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W11
            reason: "This role allows upload to all S3 buckets. The user will create a bucket during the lab." 
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - appstream.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Policies:
        - PolicyName: inlineS3PutObject
          PolicyDocument:
            Version: '2012-10-17'
            Statement: 
              - Effect: Allow
                Action:
                  - 's3:PutObject'
                Resource: '*'
      MaxSessionDuration: 3600

  iamLambdaExecutionRole:
    Type: AWS::IAM::Role
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W11
            reason: "The Amazon EC2 ec2:Describe* API actions do not support resource-level permissions" 
    Properties: 
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns: 
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: describe-ec2-az
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - 'ec2:DescribeAvailabilityZones'
                Resource: '*'
      MaxSessionDuration: 3600
      Path: /service-role/
      
  fnZoneIdtoZoneName:
    Type: AWS::Lambda::Function
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W89
            reason: "This function is used to determine which AZs to deploy the subnets in." 
          - id: W92
            reason: "This function only runs twice to select private subnets."
    Properties:
      Runtime: python3.8
      Handler: index.lambda_handler
      Code:
        ZipFile: |
          import boto3
          import cfnresponse

          def zoneId_to_zoneName(event, context):
              responseData = {}
              ec2 = boto3.client('ec2')
              describe_az = ec2.describe_availability_zones()
              for az in describe_az['AvailabilityZones']:
                  if event['ResourceProperties']['ZoneId'] == az['ZoneId']:
                      responseData['ZoneName'] = az['ZoneName']
                      cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, str(az['ZoneId']))
                      
          def no_op(event, context):
              print(event)
              responseData = {}
              cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, str(event['RequestId']))

          def lambda_handler(event, context):
              if event['RequestType'] == ('Create' or 'Update'):
                  zoneId_to_zoneName(event, context)
              else:
                  no_op(event,context)
      Role: !GetAtt iamLambdaExecutionRole.Arn

  getAZ1:
    Type: "Custom::zone-id-zone-name"
    Properties:
      ServiceToken: !GetAtt fnZoneIdtoZoneName.Arn
      ZoneId: !FindInMap [ RegionMap, !Ref 'AWS::Region', az1 ]
  getAZ2:
    Type: "Custom::zone-id-zone-name"
    Properties:
      ServiceToken: !GetAtt fnZoneIdtoZoneName.Arn
      ZoneId: !FindInMap [ RegionMap, !Ref 'AWS::Region', az2 ]

  VPC:
    Type: 'AWS::EC2::VPC'
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W60
            reason: "For the purposes of this workshop, VPC flow logs are not enabled" 
    Properties:
      CidrBlock: 10.0.0.0/20
      Tags:
        - Key: Name
          Value: AppStream2 VPC
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !GetAtt getAZ1.ZoneName
      Tags:
        - Key: Name
          Value: AppStream2 Public Subnet
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !GetAtt getAZ1.ZoneName
      Tags:
        - Key: Name
          Value: AppStream2 Private Subnet 1
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !GetAtt getAZ2.ZoneName
      Tags:
        - Key: Name
          Value: AppStream2 Private Subnet 2
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: AppStream2 IGW
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId:
        Fn::GetAtt:
        - ElasticIP
        - AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: AppStream2 NAT Gateway
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: AppStream2 Public Route Table
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: AppStream2 Private Route Table
  PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  PrivateSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  ElasticIP:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
  WindowsImageBuilder:
    Type: 'AWS::AppStream::ImageBuilder'
    Properties: 
      AppstreamAgentVersion: LATEST
      DisplayName: Image Builder
      Description: Image Builder for AppStream 2.0 hands-on lab
      EnableDefaultInternetAccess: false
      ImageName: AppStream-WinServer2019-03-03-2022
      InstanceType: stream.standard.medium
      Name: AS2_Windows_Lab_ImageBuilder
      IamRoleArn: !GetAtt iamAmazonAppStreamImageBuilderRole.Arn
      VpcConfig: 
        SubnetIds: 
        - !Ref PrivateSubnet1
  AmazonLinux2ImageBuilder:
    Type: 'AWS::AppStream::ImageBuilder'
    Properties: 
      DisplayName: Image Builder
      Description: Image Builder for AppStream 2.0 hands-on lab
      EnableDefaultInternetAccess: false
      ImageName: AppStream-AmazonLinux2-02-18-2022
      InstanceType: stream.standard.medium
      Name: AS2_Linux_Lab_ImageBuilder
      IamRoleArn: !GetAtt iamAmazonAppStreamImageBuilderRole.Arn
      VpcConfig: 
        SubnetIds: 
        - !Ref PrivateSubnet1

Outputs:
  AZ1az:
    Value: !GetAtt getAZ1.ZoneName
  AZ2az:
    Value: !GetAtt getAZ2.ZoneName
